--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
   <p> I have come a long way to be a Web Developer, until 1 year ago I never considered being a tech guy. But here I am, from the moment that I wrote my first "Hello world" until now.<br/><br/>
   I spent the last 10 years as a strength & conditioning coach for national and international athletes and as a personal trainer.<br/><br/>
   I chose "to code" because it is a very big challenge for me, over fear and doubts I chose to learn something completely new in my life.<br/><br/>
-  What I like the most when i write "codes" is that for every problem you can always find at least one solution, it is like embracing a new lifestyle.<br/><br/>
-  I might be a rookie but what I learned from my previous job as a coach, is: " much better coaching people that are willing to learn instead of gifted athletes with poor work ethic."
+  What I like the most of being a developer is that when you "write code" for every problem there is always ( at leats ) one solution, it is like embracing a new lifestyle !<br/><br/>
+  I might be a rookie but i am hungry for learning and something  I learned in my previous job, is: " much better to coach people willing to learn instead of gifted people with poor work ethic."
 </p>
 <div class="frame"></div>
 <img src="lastday.jpeg" alt="pic">
@@ -135,7 +135,7 @@
    
     <div class="red" id="red"> </div>
   
-    <div class="blue" id="blue"></div>
+    <div class="blue" id="blue"> </div>
   
 
 </div>
@@ -143,7 +143,7 @@
 <section class="contacts">
   <h2>Contact me</h2>
   <ul>
-    <li>Mobile: 0543422305</li>s
+    <li>Mobile: 0543422305</li>
     <li>Email: barbieri.andrea1978@gmail.com</li>
     <li></li>
   </ul>
